--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <div class="music-Player">
+
+        </div>
+    </div>
+
+
+
     <script href="script.js"></script>
 </body>
 </html>
