--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Player Application</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/5af1316d11.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
         <div class="music-Player">
+            <nav>
+                <div class="circle">
+                    <i class="fa-solid fa-angles-left"></i>
+                </div>
+                <div class="circle">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+            </nav>
+            <img src="Media/mugshot_of_pink_robot_holding_a_microphone_singing_in_light_pink_background.png" class="song-image">
+            <h1>Lil Uzi Vert</h1>
+            <p>The Way Life Goes Ft. Nicki Minaj</p>
+
+            <audio controls>
+                <source src="Media/Lil Uzi Vert - The Way Life Goes Remix (Feat. Nicki Minaj) [Official Music Video].mp3" type="audio/mp3" >
+            </audio>
+            <input type="range" value="0" id="progress">
+
+            <div class="controls">
+                <div>
+                    
+                </div>
+            </div>
 
         </div>
     </div>
